--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="wordDecided" class="space">_____</div>
     <div class="words">my future lies</div>
     <div class="words">beyond the</div>
-    <div class="words">yellow brick road...</div>
+    <div class="words">yellow brick road</div>
 
     <div class="buttons">
       <button id="btnDecide" class="btn">decide</button>
